// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoomAvatar should render as expected for a DM room 1`] = `
<div>
  <span
    class="mx_BaseAvatar"
    role="presentation"
    style="width: 36px; height: 36px;"
  >
    <span
      aria-hidden="true"
      class="mx_BaseAvatar_image mx_BaseAvatar_initial"
      data-testid="avatar-img"
      style="background-color: rgb(13, 189, 139); width: 36px; height: 36px; font-size: 23.400000000000002px; line-height: 36px;"
    >
      D
    </span>
  </span>
</div>
`;

exports[`RoomAvatar should render as expected for a LocalRoom 1`] = `
<div>
  <span
    class="mx_BaseAvatar"
    role="presentation"
    style="width: 36px; height: 36px;"
  >
    <span
      aria-hidden="true"
      class="mx_BaseAvatar_image mx_BaseAvatar_initial"
      data-testid="avatar-img"
      style="background-color: rgb(172, 59, 168); width: 36px; height: 36px; font-size: 23.400000000000002px; line-height: 36px;"
    >
      L
    </span>
  </span>
</div>
`;

exports[`RoomAvatar should render as expected for a Room 1`] = `
<div>
  <span
    class="mx_BaseAvatar"
    role="presentation"
    style="width: 36px; height: 36px;"
  >
    <span
      aria-hidden="true"
      class="mx_BaseAvatar_image mx_BaseAvatar_initial"
      data-testid="avatar-img"
      style="background-color: rgb(172, 59, 168); width: 36px; height: 36px; font-size: 23.400000000000002px; line-height: 36px;"
    >
      T
    </span>
  </span>
</div>
`;
